# SongToScreen

./: .env.example  .gitignore  CLAUDE.md  PIPELINE_CONTEXT.md  PYTHON_STANDARDS.md  README.md  main.py  pyproject.toml  requirements.txt
core/: checkpoint.py  config.py  db.py  exceptions.py  llm.py  logger.py
pipeline/: stage01_ingest.py  stage02_audio.py  stage03_scene_plan.py  stage04_acquire.py  stage05_assemble.py  stage06_captions.py  stage07_render.py  stage08_thumbnail.py  stage09_dashboard.py  stage10_upload.py
prompts/: scene_plan.j2
