[project]
name = "gospel-pipeline"
version = "0.1.0"
description = "Fully automated pipeline that converts gospel music into YouTube-ready music videos."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "watchdog>=4.0",
    "mutagen>=1.46",
    "lyricsgenius>=3.0",
    "openai>=1.0",
    "mistralai>=1.0",
    "instructor>=1.0",
    "jinja2>=3.1",
    "librosa>=0.10",
    "numpy>=1.24",
    "soundfile>=0.12",
    "requests>=2.31",
    "tenacity>=8.0",
    "tqdm>=4.65",
    "ffmpeg-python>=0.2",
    "Pillow>=10.0",
    "streamlit>=1.28",
    "SQLAlchemy>=2.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "APScheduler>=3.10",
]
